Fix a11y issues on mobile nav

--- a/sass/navigation/_nav-mobile.scss
+++ b/sass/navigation/_nav-mobile.scss
@@ -51,8 +51,10 @@ $nav-open-from-direction: top;
       overflow: hidden;
 
       .nav-primary {
-        // Smooth animation based on https://medium.com/outsystems-experts/how-to-achieve-60-fps-animations-with-css3-db7b98610108
-        transform: translateY(0) translateX(0);
+        visibility: visible;
+        opacity: 1;
+        pointer-events: all;
+        background: $nav-background-color;
 
         .menu-items {
           opacity: 1;
@@ -81,32 +83,16 @@ $nav-open-from-direction: top;
   .nav-primary {
     height: 100vh;
     width: 100vw;
-    background: $nav-background-color;
     overflow: auto;
     transition: all 300ms ease-in-out;
     margin: 0;
     display: block;
-    will-change: transform;
-
-    // These need to be here instead of .js .nav-primary to prevent flickering on load
-    @if $nav-open-from-direction == top {
-      transform: translateY(-100vh);
-    }
-
-    @if $nav-open-from-direction == right {
-      transform: translateX(100vw);
-    }
-
-    @if $nav-open-from-direction == bottom {
-      transform: translateY(100vh);
-    }
-
-    @if $nav-open-from-direction == left {
-      transform: translateX(-100vw);
-    }
+    will-change: opacity;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 
     .menu-items {
-      transition: all .55s;
       opacity: 0;
       margin: 0;
       width: 100%;
